--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
             <span>顶尖团队、高性价比、快速交付、优质服务</span>
             <div class="btn-group">
                 <a href="#contact" class="btn highlight">联系我们</a>
-                <a href="https://github.com/OblivionOcean" class="btn">GitHub</a>
+                <a href="https://github.com/YangShunXi/jly-home" class="btn">GitHub</a>
 
             </div>
             <svg width="564" height="552" viewBox="0 0 564 552" fill="none" xmlns="http://www.w3.org/2000/svg">
